# BenchMARL

./: .gitignore  AGENTS.md  README.md  pyproject.toml  treeutils.md
benchmarl/: benchmarl_flatland.py  eval_results.py  evaluate.py  hydra_config.py
benchmarl/algorithms/: common.py  ippo.py  mappo.py  masac.py
benchmarl/conf/algorithm/: ippo_flatland.yaml
benchmarl/conf/experiment/: base_experiment.yaml  flatland_ippo.yaml
benchmarl/conf/model/layers/: flatland_tree_transformer.yaml  flatland_tree_transformer_critic.yaml  flatland_tree_transformer_feature.yaml  flatland_treegnn.yaml  flatland_treegnn_critic.yaml  flatland_treelstm.yaml  flatland_treelstm_critic.yaml  flatland_treelstm_feature.yaml
benchmarl/conf/model/sequence/: flatland_tree_transformer_sequence.yaml  (+1 more)
benchmarl/environments/: __init__.py
benchmarl/environments/flatland/: __init__.py  common.py  flatland.py  flatland_base.py  python_tree_adapter.py  torchrl_flatland_env.py  torchrl_rail_env.py  torchrl_rail_env.py.orig  transforms.py
benchmarl/experiment/: experiment.py  logger.py
benchmarl/models/: __init__.py  flatland_tree_modules.py  flatland_treelstm.py  gnn.py
fine_tuned/flatland/: benchmark.py  benchmark_curriculum.py  benchmark_evaluate.py  flatland_eval_plots.py  implementation.md  short_benchmark.py  short_benchmark.py.orig  short_benchmark_curriculum.py  short_benchmark_evaluate.py
fine_tuned/flatland/conf/: config.yaml  run_mlp_2026-03-25_phase01.yaml  run_treetransformer_2026-03-29_phase02.yaml
fine_tuned/flatland_mappo/conf/: config.yaml
(+29 files in other folders)
