
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmarl"
version = "0.0.0"
description = "BenchMARL extension with Flatland support"
requires-python = ">=3.10,<3.12"

dependencies = [
  "flatland-rl==4.0.1",
  "torchrl==0.10.0",
  "tqdm",
  "hydra-core",
  "torchvision",
  "av<14",
  "numpy",
  "flatland_cutils @ git+https://github.com/louiesmrs/flatland_cutils.git@refs/heads/main",
  "setuptools>=69.0.0,<70",
  "torch-geometric>=2.7.0",
  "tensorboard>=2.20.0",
]

[tool.setuptools]
packages = ["benchmarl"]
